# goati

./: README.md  myc.cabal  myi.cabal  stack.yaml
app/: Main.hs  Web.hs
common/: README.md  goati.cabal  myi.cabal
common/src/Goat/: Co.hs  Comp.hs  Error.hs  Eval.hs  Expr.hs  Interpreter.hs  Lang.lhs  Prism.hs  Union.hs  Util.hs  Version.hs
common/src/Goat/Dyn/: DynMap.hs
common/src/Goat/Eval/: Dyn.hs  IO.hs
common/src/Goat/Eval/IO/: Dyn.hs  Old.hs
common/src/Goat/Eval/Import/: Dyn.hs
common/src/Goat/Expr/: Bindings.hs  Dyn.hs  New.hs  Pattern.hs  Repr.hs
common/src/Goat/Expr/Pattern/: Lang.hs
common/src/Goat/Expr/Repr/: Lang.hs
common/src/Goat/Interpret/: Browse.hs  File.hs  Inspect.hs  Program.hs  Run.hs
common/src/Goat/Interpreter/: Browse.hs  Program.hs
common/src/Goat/Lang/: ArithB.hs  Block.hs  Class.lhs  CmpB.hs  Comment.hs  Error.hs  Esc.hs  Expr.hs  Extend.hs  Extern.hs  Field.hs  Ident.hs  Keyword.hs  Let.hs  LogicB.hs  Match.hs  Module.hs  Number.hs  Parser.lhs  Path.hs  Preface.hs  Reflect.hs  Symbol.hs  Text.hs  Unop.hs
common/src/Goat/Lang/Parser/: Block.hs  Block.lhs  Block_.lhs  Definition.lhs  NumberLiteral.lhs  Path.lhs  Pattern.lhs  Preface.lhs  Token.hs  Token.lhs
common/src/Goat/Repr/: Assoc.hs  Dyn.hs  Eval.hs  Expr.hs  Lang.hs  Pattern.hs  Preface.hs
common/src/Goat/Repr/Eval/: Dyn.hs
common/src/Goat/Repr/Expr/: Lang.hs  Rev.hs
common/src/Goat/Repr/Lang/: Expr.hs  Pattern.hs  Preface.hs
common/src/Goat/Repr/Pattern/: Lang.hs
common/src/Goat/Syntax/: ArithB.hs  Binop.hs  Binop_.hs  Block.hs  Class.hs  CmpB.hs  Comment.hs  Esc.hs  Expr.hs  Extend.hs  Extern.hs  Field.hs  Fixity.hs  Ident.hs  Import.hs  Import_.hs  Infix.hs  Interpreter.hs  Keyword.hs  Let.hs  Lit.hs  LogicB.hs  Number.hs  Parser.hs  Patt.hs  Patterns.hs  Prec.hs  Preface.hs  Symbol.hs  Syntax.hs  Text.hs  Unop.hs
common/src/Goat/Syntax/Infix/: Old.hs
common/src/Goat/Types/: DynMap.hs  Error.hs  Eval.hs  Expr.hs  Syntax.hs
common/src/Goat/Types/Paths/: Path.hs  Patt.hs  Rec.hs  Tup.hs
common/src/Goat/Types/Syntax/: Class.hs
common/src/My/: Types.hs  Util.hs
common/src/My/Eval/: Builtin_.hs  IO.hs
common/src/My/Syntax/: Interpreter.hs  Parser.hs  Repr.hs  Repr_.hs  Vocabulary.hs  Vocabulary_.hs
common/src/My/Syntax/Vocabulary/: Old.hs
common/src/My/Types/: DynMap.hs  Error.hs  Eval.hs  Expr.hs  Interpreter.hs  Parser.hs  Prim.hs  Repr.hs  Syntax.hs
common/src/My/Types/Paths/: Path.hs  Patt.hs  Rec.hs  Tup.hs
common/src/My/Types/Syntax/: Class.hs
common/test/: Eval.hs  IO.hs  Import.hs  Parser.hs  Spec.hs
common/test/Eval/: Dyn.hs  IO.hs
common/test/Eval/IO/: Dyn.hs
common/test/Expr/: Dyn.hs
common/test/Lang/: Eval.hs  Import.hs  Parser.hs
common/test/Lang/Eval/: IO.hs
common/test/Syntax/: Eval.hs  Import.hs  Parser.hs
common/test/Syntax/Class/: Eval.hs  Expr.hs  IO.hs  Import.hs  Parser.hs
common/test/Syntax/Eval/: Dyn.hs  IO.hs
common/test/Syntax/Eval/IO/: Dyn.hs
common/test/Syntax/Expr/: Dyn.hs
native/: LICENSE  README.md  goati-native.cabal  myi-native.cabal  stack.yaml
native/app/: Main.hs
src/: Builtin.hs  Core.hs  Error.hs  Eval.hs  Expr.hs  Import.hs  Lib.hs  My.hs  Parser.hs  Prim.hs  Primop.hs  Syntax.hs  Test.hs  Types.hs  Util.hs  Version.hs
src/Eval/: Base.hs  Core.hs  IO.hs  Value.hs
src/My/: Base.hs  Builtin.hs  Eval.hs  Eval_.hs  Expr.hs  IOPrim.hs  Import.hs  Parser.hs  Prim.hs  Syntax.hs  Types.hs  Util.hs  Version.hs
src/My/Eval/: IO.hs  IO_.hs
src/My/Parser/: Class.hs
src/My/Syntax/: Class.hs  Expr.hs  Import.hs  Interpreter.hs  Parser.hs  Repr.hs  Vocabulary.hs
src/My/Syntax/Import/: Old.hs
src/My/Types/: Classes.hs  Expr.hs  IOPrim.hs  Interpreter.hs  Parser.hs  Prim.hs  Repr.hs  Syntax.hs
src/My/Types/Parser/: Class.hs  Short.hs
src/My/Types/Syntax/: Class.hs
src/Test/: Parser.hs
src/Types/: Classes.hs  Core.hs  Error.hs  Eval.hs  Expr.hs  Intermediate.hs  Interpreter.hs  Myi.hs  Parser.hs  Primop.hs  Short.hs  Syntax.hs  Util.hs
src/Types/Error/: Eval.hs
src/Types/Eval/: Cell.hs  Ided.hs  Scope.hs  Value.hs
src/Types/Parser/: Base.hs  Classes.hs  Short.hs
src/Types/Util/: Configurable.hs  List.hs
src/Utils/: Assoc.hs  Lens.hs
src/Utils/List/: Prefix.hs
test/: Eval.hs  Expr.hs  IO.hs  Import.hs  Parser.hs  Repr.hs  Repr_.hs  Spec.hs
test/Parser/: Short.hs
test/Syntax/: Class.hs  Expr.hs  Import.hs  Parser.hs  Type.hs
test/Syntax/Class/: Eval.hs  Expr.hs  IO.hs  IO_.hs  Import.hs  Parser.hs  Repr.hs  Repr_.hs  Type.hs
test/Syntax/Type/: Eval.hs  Expr.hs  IO.hs  Import.hs  Parser.hs
test/Syntax/Type/Parser/: Short.hs
test/Test/: Core.hs  Eval.hs  Expr.hs  Import.hs  Parser.hs
test/Test/Parser/: Short.hs
test/data/: chain.my  import.my
test/data/Import/: chain.my
test/data/chain/: import.my
test/data/nested/: chain.my
web/: README.md  cp_js.sh  goati-web.cabal  myi-web.cabal  stack.yaml
web/app/: Web.hs
