name:                myc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbalam/myc#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Lamberton
maintainer:          tim.lamberton@gmail.com
copyright:           (c) 2016 Tim Lamberton
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Parser
                     , Types.Parser
                     , Types.Eval
                     , Types.Short
                     , Eval
                     , Error
  build-depends:       base >= 4.7 && < 5 
                     , parsec >= 3.1 && < 4
                     , mtl >= 2.2.1 && < 3
                     , transformers >= 0.4.2 && < 0.5
                     , containers >= 0.5.6 && < 0.6
                     , semigroups >= 0.18.1 && < 0.19
                     --, free >= 4.12.4 && < 5
                     --, list-transformer >= 1.0.1 && < 2
  default-language:    Haskell2010

executable myc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , myc
  default-language:    Haskell2010

test-suite myc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Parser
                     , Test.Eval
  build-depends:       base
                     , myc
                     , HUnit >= 1.3 && < 2
                     , transformers >= 0.4.2 && < 0.5
                     , mtl >= 2.2.1 && < 3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbalam/myc
