name:                myi
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbalam/myi#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Lamberton
maintainer:          tim.lamberton@gmail.com
copyright:           (c) 2016 Tim Lamberton
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types.Parser
                     , Types.Parser.Short
                     , Types.Eval
                     , Types.Error
                     , Types.Util
                     , Eval
                     , Version
                     , Parser
                     --, Scope
  other-modules:       Types.Eval.Ided
                     , Types.Eval.Value
                     , Types.Eval.Cell
                     , Types.Eval.Scope
                     , Types.Parser.Base
                     , Eval.Base
                     , Eval.Value
  build-depends:       base >= 4.7 && < 5 
                     , parsec >= 3.1 && < 4
                     , mtl >= 2.2.1 && < 3
                     , transformers >= 0.4.2 && < 0.6
                     , containers >= 0.5.8 && < 0.6
                     , semigroups >= 0.18.1 && < 0.19
                     , exceptions >= 0.8.3 && < 0.9
  default-language:    Haskell2010

executable myc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , myi
                     , semigroups >= 0.18.1 && < 0.19
  default-language:    Haskell2010

test-suite myc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Parser
                     , Test.Eval
  build-depends:       base
                     , myi
                     , HUnit >= 1.3 && < 2
                     , transformers >= 0.4.2 && < 0.6
                     , mtl >= 2.2.1 && < 3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbalam/myi
