name:                myi
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbalam/myi#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Lamberton
maintainer:          tim.lamberton@gmail.com
copyright:           (c) 2016 Tim Lamberton
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     My
                     , My.Types.Parser
                     , My.Types.Parser.Short
                     , My.Types.Syntax
                     , My.Types.Syntax.Class
                     , My.Types
                     , My.Types.Expr
                     , My.Eval
                     , My.Eval.IO
                     , My.Version
                     , My.Parser
                     , My.Syntax.Parser
                     , My.Expr
                     , My.Base
  other-modules:       My.Types.Classes
                     , My.Types.Interpreter
                     , My.Types.Error
                     , My.Import
                     , My.Util
  build-depends:       base >= 4.9
                     , containers >= 0.5.8
                     , text
                     , mtl
                     , free
                     , bound
                     , parsec
                     , filepath
                     , directory
                     , bifunctors
                     , transformers
                     , exceptions
  default-language:    Haskell2010

executable myi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , myi
                     , directory
  default-language:    Haskell2010

test-suite myi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Parser.Short
                     , Parser
                     , Expr
                     , Eval
                     , Import
                     , IO
  build-depends:       base
                     , myi
                     , HUnit
                     , silently
                     , text
                     , parsec
                     , mtl
                     , containers
                     , free
                     , bound
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbalam/myi
