name:                goati
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbalam/goati/common#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Lamberton
maintainer:          tim.lamberton@gmail.com
copyright:           (c) 2016 Tim Lamberton
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Goat.Syntax.Class
                     , Goat.Syntax.Syntax
                     , Goat.Error
                     , Goat.Eval
                     , Goat.Expr
                     , Goat.Types.Paths.Path
                     , Goat.Types.Paths.Patt
                     , Goat.Types.Paths.Tup
                     , Goat.Types.Paths.Rec
                     , Goat.Types.DynMap
                     , Goat.Eval.IO
                     , Goat.Version
                     , Goat.Syntax.Parser
                     , Goat.Interpreter
                     , Goat.Util
  build-depends:       base
                     , containers
                     , text
                     , mtl
                     , free
                     , bound
                     , parsec
                     , bifunctors
                     , transformers
                     , exceptions
                     , semigroups
                     , semigroupoids
                     , constraints
                     , recursion-schemes
                     , prelude-extras
  default-language:    Haskell2010

test-suite goati-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Syntax.Class.Parser
                     , Syntax.Class.Eval
                     , Syntax.Class.Expr
                     , Syntax.Class.IO
                     , Parser
                     , Eval
                     , Import
                     , IO
  build-depends:       base
                     , goati
                     , HUnit
                     , silently
                     , text
                     , parsec
                     , mtl
                     , containers
                     , free
                     , bound
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbalam/goati
