name:                goati
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbalam/goati/common#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Lamberton
maintainer:          tim.lamberton@gmail.com
copyright:           (c) 2016 Tim Lamberton
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Goat.Syntax.Class
                     , Goat.Syntax.Syntax
                     , Goat.Syntax.Parser
                     , Goat.Syntax.Patterns
                     , Goat.Lang.Symbol
                     , Goat.Lang.Class
                     , Goat.Lang.Parser.Token
                     , Goat.Lang.Parser.Path
                     , Goat.Lang.Parser.Pattern
                     , Goat.Lang.Parser.Block
                     , Goat.Lang.Parser.Preface
                     , Goat.Lang.Parser
                     , Goat.Lang.Ident
                     , Goat.Lang.Field
                     , Goat.Lang.Comment
                     --, Goat.Syntax.Infix
                     , Goat.Lang.Unop
                     , Goat.Lang.ArithB
                     , Goat.Lang.CmpB
                     , Goat.Lang.LogicB
                     , Goat.Lang.Number
                     , Goat.Lang.Text
                     , Goat.Lang.Keyword
                     , Goat.Lang.Extern
                     , Goat.Lang.Extend
                     , Goat.Lang.Esc
                     , Goat.Lang.Let
                     , Goat.Lang.Block
                     , Goat.Lang.Module
                     , Goat.Lang.Reflect
                     , Goat.Lang.Preface
                     , Goat.Lang.Expr
                     , Goat.Lang.Path
                     , Goat.Lang.Match
                     , Goat.Prism
                     , Goat.Comp
                     , Goat.Error
                     , Goat.Eval
                     , Goat.Eval.Dyn
                     , Goat.Eval.Import.Dyn
                     , Goat.Eval.IO
                     , Goat.Eval.IO.Dyn
                     , Goat.Expr
                     , Goat.Repr.Assoc
                     , Goat.Repr.Pattern
                     , Goat.Repr.Lang.Pattern
                     , Goat.Repr.Expr
                     , Goat.Repr.Lang.Expr
                     , Goat.Repr.Preface
                     , Goat.Repr.Lang.Preface
                     , Goat.Expr.Dyn
                     --, Goat.Types.Paths.Path
                     --, Goat.Types.Paths.Patt
                     --, Goat.Types.Paths.Tup
                     --, Goat.Types.Paths.Rec
                     , Goat.Dyn.DynMap
                     , Goat.Version
                     , Goat.Interpreter
                     , Goat.Util
  build-depends:       base
                     , containers
                     , text
                     , mtl
                     , free
                     , bound
                     , parsec
                     , bifunctors
                     , transformers
                     , exceptions
                     , semigroups
                     , semigroupoids
                     , constraints
                     , recursion-schemes
                     , prelude-extras
                     , directory
                     , filepath
                     , these
                     , profunctors
                     , tagged
                     , scientific
                     --, mmorph
                     --, kan-extensions
  default-language:    Haskell2010

test-suite goati-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Syntax.Parser
                     , Syntax.Eval
                     , Syntax.Eval.IO
                     --, Syntax.Import
                     , Parser
                     , Eval.Dyn
                     , Eval.IO.Dyn
                     , Expr.Dyn
  build-depends:       base
                     , goati
                     , HUnit
                     , silently
                     , text
                     , parsec
                     , mtl
                     , containers
                     , free
                     , bound
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbalam/goati
