name:                goati
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbalam/goati/common#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Lamberton
maintainer:          tim.lamberton@gmail.com
copyright:           (c) 2016 Tim Lamberton
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Goat.Lang.Class
                     , Goat.Lang.Parser.Token
                     , Goat.Lang.Parser.Path
                     , Goat.Lang.Parser.Pattern
                     , Goat.Lang.Parser.Block
                     , Goat.Lang.Parser.Preface
                     , Goat.Lang.Parser
                     , Goat.Lang.Error
                     , Goat.Repr.Pattern
                     , Goat.Repr.Expr
                     , Goat.Repr.Expr.Rev
                     , Goat.Repr.Preface
                     , Goat.Repr.Dyn
                     , Goat.Repr.Eval.Dyn
                     , Goat.Repr.Eval
                     , Goat.Repr.Lang.Pattern
                     , Goat.Repr.Lang.Expr
                     , Goat.Repr.Lang.Preface
                     , Goat.Repr.Lang
                     , Goat.Interpret.Browse
                     , Goat.Interpret.Inspect
                     , Goat.Interpret.Run
                     , Goat.Version
                     , Goat.Util
  build-depends:       base
                     , bifunctors
                     , bound
                     , containers
                     , contravariant
                     , directory
                     , discrimination
                     , filepath
                     , mtl
                     , parsec
                     , prelude-extras
                     , scientific
                     , semigroups
                     , semigroupoids
                     , text
                     , these
                     , transformers
  default-language:    Haskell2010

test-suite goati-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Lang.Parser
                     , Lang.Eval
                     , Lang.Import
                     , Lang.Eval.IO
                     , Parser
                     , Import
                     , Eval.Dyn
                     , Eval.IO.Dyn
  build-depends:       base
                     , goati
                     , HUnit
                     , silently
                     , text
                     , parsec
                     , mtl
                     , containers
                     , filepath
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbalam/goati
