name:                myi
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbalam/myi#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Lamberton
maintainer:          tim.lamberton@gmail.com
copyright:           (c) 2016 Tim Lamberton
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     My.Types
                     , My.Types.Repr
                     , My.Types.Prim
                     , My.Types.Syntax
                     , My.Types.Syntax.Class
                     , My.Types.Interpreter
                     , My.Types.Error
                     , My.Types.Eval
                     , My.Types.Paths.Path
                     , My.Types.Paths.Patt
                     , My.Types.Paths.Tup
                     , My.Types.Paths.Rec
                     --, My.Eval.IO
                     --, My.Eval.Builtin
                     , My.Version
                     , My.Syntax.Parser
                     --, My.Syntax.Import
                     , My.Syntax.Repr
                     , My.Syntax.Vocabulary
                     , My.Syntax.Interpreter
                     , My.Util
  build-depends:       base
                     , containers
                       -- >= 0.5.8
                     , text
                     , mtl
                     , free
                     , bound
                     , parsec
                     --, filepath
                     --, directory
                     , bifunctors
                     , transformers
                     , exceptions
                     , semigroups
                     , semigroupoids
                     , constraints
                     , recursion-schemes
                     , prelude-extras
  default-language:    Haskell2010

test-suite myi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Syntax.Class.Parser
                     --, Syntax.Class.Type
                     , Syntax.Class.Eval
                     , Syntax.Class.Expr
                     , Syntax.Class.IO
                     , Syntax.Class.Import
                     , Parser
                     , Eval
                     , Import
                     , IO
  build-depends:       base
                     , myi
                     , HUnit
                     , silently
                     , text
                     , parsec
                     , mtl
                     , containers
                     , free
                     , bound
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbalam/myi
